[gd_scene load_steps=9 format=2]

[ext_resource path="res://Asset/Font/Roboto_Bold.tres" type="DynamicFont" id=1]
[ext_resource path="res://Asset/Font/Roboto-Regular.tres" type="DynamicFont" id=2]
[ext_resource path="res://Asset/Sprites/Greenhouse.png" type="Texture" id=4]
[ext_resource path="res://Asset/Sprites/Mine.png" type="Texture" id=5]
[ext_resource path="res://Asset/Font/Roboto-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Asset/Scripts/UI.gd" type="Script" id=7]

[sub_resource type="StreamTexture" id=2]
flags = 4
load_path = "res://.import/SolarPanel.png-006e92447d15a9bc6b372c693092cac1.stex"

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 6 )

[node name="UI" type="Control"]
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="EndTurnButton" type="Button" parent="BG"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1080.0
margin_top = 48.0
margin_right = -44.0
margin_bottom = -48.0
custom_fonts/font = ExtResource( 1 )
text = "End Turn"

[node name="TurnText" type="Label" parent="BG"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 936.0
margin_top = 56.0
margin_right = -241.0
margin_bottom = -52.0
custom_fonts/font = ExtResource( 2 )
text = "Turn:00"

[node name="BuidingButtons" type="HBoxContainer" parent="BG"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -1004.0
margin_bottom = -34.0

[node name="GreenHouse" type="Button" parent="BG/BuidingButtons"]
margin_right = 76.0
margin_bottom = 70.0
icon = ExtResource( 4 )
align = 0

[node name="Mine" type="Button" parent="BG/BuidingButtons"]
margin_left = 80.0
margin_right = 156.0
margin_bottom = 70.0
icon = ExtResource( 5 )

[node name="Solar" type="Button" parent="BG/BuidingButtons"]
margin_left = 160.0
margin_right = 236.0
margin_bottom = 70.0
icon = SubResource( 2 )
align = 2

[node name="HeaderFoodMetal" type="Label" parent="BG"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 368.0
margin_top = 40.0
margin_right = -830.0
margin_bottom = -29.0
custom_fonts/font = ExtResource( 2 )
text = "Food:
Metal:"

[node name="FoodMetalText" type="Label" parent="BG/HeaderFoodMetal"]
margin_left = 96.0
margin_right = 178.0
margin_bottom = 75.0
custom_colors/font_color = Color( 0.956863, 0.447059, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "25
33"

[node name="HeaderOxygenEnergy" type="Label" parent="BG"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 648.0
margin_top = 40.0
margin_right = -525.0
margin_bottom = -29.0
custom_fonts/font = ExtResource( 2 )
text = "Oxygen:
Enegry:"

[node name="OxygenEnergyText" type="Label" parent="BG/HeaderOxygenEnergy"]
margin_left = 120.0
margin_right = 202.0
margin_bottom = 75.0
custom_colors/font_color = Color( 0.956863, 0.447059, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "25
33"
